<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="model" type="house_quarantine.liquid_studio.com.android_tracker.main.onboarding.user.UserFormViewModel"/>
        <variable name="handler" type="house_quarantine.liquid_studio.com.android_tracker.main.onboarding.user.UserFormHandler"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context="house_quarantine.liquid_studio.com.android_tracker.main.onboarding.qr.QRFragment">

        <TextView
            android:id="@+id/text_register_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_label_register_header"
            android:textAppearance="@style/InfoFont"
            android:textColor="@color/cardview_light_background"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.07999998" />

        <TextView
            android:id="@+id/text_register_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/app_label_register_instructions"
            android:textAppearance="@style/StandardFont"
            android:textSize="14sp"
            android:maxLines="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_register_label" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_layout_full_name"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg"
            android:gravity="center"
            android:textColorHint="@color/cardview_light_background"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_register_instructions">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:enabled="@{model.enabled}"
                android:hint="@string/edit_hint_full_name"
                android:inputType="text"
                android:lines="1"
                android:text="@={model.name}"
                android:textAppearance="@style/InfoFont"
                android:textColor="@color/cardview_light_background"
                android:textColorHint="@color/dim_white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_layout_nric"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg"
            android:gravity="center"
            android:textColorHint="@color/cardview_light_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_layout_full_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_nric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:enabled="@{model.enabled}"
                android:hint="@string/edit_hint_nric"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:text="@={model.nric}"
                android:textAppearance="@style/InfoFont"
                android:textColor="@color/cardview_light_background" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_layout_address"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg"
            android:gravity="center"
            android:textColorHint="@color/cardview_light_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_layout_nric">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:enabled="@{model.enabled}"
                android:hint="@string/edit_hint_address"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:text="@={model.address}"
                android:textAppearance="@style/InfoFont"
                android:textColor="@color/cardview_light_background" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_layout_contact"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg"
            android:gravity="center"
            android:textColorHint="@color/cardview_light_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_layout_address">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:enabled="@{model.enabled}"
                android:hint="@string/edit_hint_contact"
                android:inputType="phone"
                android:lines="1"
                android:maxLines="1"
                android:text="@={model.phone}"
                android:textAppearance="@style/InfoFont"
                android:textColor="@color/cardview_light_background" />

        </android.support.design.widget.TextInputLayout>


    </android.support.constraint.ConstraintLayout>

</layout>
